--- a/app/src/main/res/layout/adapter_conversas.xml
+++ b/app/src/main/res/layout/adapter_conversas.xml
@@ -29,7 +29,7 @@
             android:id="@+id/textView6"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Nome"
+            android:text="TextView1"
             android:textColor="@android:color/black"
             android:textStyle="bold" />
 
@@ -37,7 +37,7 @@
             android:id="@+id/textView7"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:text="TextView2" />
     </LinearLayout>
 
 </LinearLayout>
