--- a/app/src/main/res/layout/adapter_conversas.xml
+++ b/app/src/main/res/layout/adapter_conversas.xml
@@ -9,11 +9,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginTop="10dp"
     android:orientation="horizontal"
     android:padding="5dp">
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/imageView"
+        android:id="@+id/imageViewFotoConversa"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:src="@drawable/blank_profile_picture" />
@@ -26,7 +27,7 @@
         android:padding="5dp">
 
         <TextView
-            android:id="@+id/textView6"
+            android:id="@+id/textNomeConversa"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Nome"
@@ -34,7 +35,7 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/textView7"
+            android:id="@+id/textUltimaMensagemConversa"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="TextView" />
